# simple_voice_chat

./: .gitignore  README.md  form.json  main.py  pyproject.toml  setup.py
simple_voice_chat/utils/: llms.py  tts.py
src/: __main__.py  index.html  simple_voice_chat.py
src/utils/: config.py  env.py  llms.py  logging_config.py  misc.py  stt.py  tts.py
tests/: test_simple_voice_chat_config.py
