[project]
name = "simple_voice_chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0",                # Added click
    "qtpy>=2.4.3",
    "filelock>=3.18.0",
    "fastrtc[vad,tts]>=0.0.23",
    "openai>=1.76.0",
    "twilio>=9.5.2",
    "python-dotenv>=1.1.0",
    "pywebview>=5.4",
    "PyQt6>=6.9.0",
    "PyQt6-WebEngine>=6.9.0",
    "psutil>=7.0.0",
    "numpy>=2.2.5",
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
    "litellm>=1.67.2",
    "loguru>=0.7.3",
    "platformdirs>=4.3.7",
    "google-genai >= 1.14.0",
]
[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ['src']
